Shop items align fixed

--- a/src/sass/modules/_hero.scss
+++ b/src/sass/modules/_hero.scss
@@ -86,6 +86,8 @@
         color: $white;
         color: $darkSand;
         font-family: $titleFont;
+        font-size: 1.125rem;
+        // font-size: 1rem;
         line-height: 1.4;
     }
 }
