--- a/src/sass/modules/_site-section.scss
+++ b/src/sass/modules/_site-section.scss
@@ -47,6 +47,7 @@
     p {
         // typography
         font-family: $mainFont;
+        font-size: 1.125rem;
         font-size: 1rem;
         font-weight: 300;
         line-height: 1.5;
