--- a/src/sass/modules/_wrapper.scss
+++ b/src/sass/modules/_wrapper.scss
@@ -16,6 +16,10 @@
         display: flex;
         justify-content: space-around;
         flex-wrap: wrap;
-        // border: 1px solid red;
+    }
+
+    &--center {
+        // typography
+        text-align: center;
     }
 }
